<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:layout_gravity="center"
             tools:context="org.androidgrader.app.ui.fragments.GradeFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/points"
                android:id="@+id/lblPoints"
                android:layout_marginStart="26dp" android:layout_marginTop="23dp" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/items"
                android:id="@+id/lblItems" android:layout_alignTop="@+id/lblPoints" android:layout_alignParentEnd="true"
                android:layout_marginEnd="26dp" android:layout_toEndOf="@+id/textView5"/>
        <NumberPicker
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npPoints"
                android:layout_below="@+id/lblPoints" android:layout_alignStart="@+id/lblPoints"/>
        <NumberPicker
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npItems" android:layout_alignTop="@+id/npPoints"
                android:layout_alignEnd="@+id/lblItems"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/mistakes"
                android:id="@+id/textView5"
                android:layout_below="@+id/npPoints" android:layout_alignEnd="@+id/lblScore"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/entire"
                android:id="@+id/lblEntire"
                android:layout_below="@+id/textView5" android:layout_alignStart="@+id/npPoints"
                android:layout_alignEnd="@+id/npPoints"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/huge"
                android:id="@+id/textView7"
                android:layout_alignTop="@+id/lblEntire" android:layout_alignEnd="@+id/npHuge"
                android:layout_toEndOf="@+id/textView5"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/normal"
                android:id="@+id/lblNormal"
                android:layout_alignTop="@+id/textView7" android:layout_alignStart="@+id/npNormal"
                android:layout_toStartOf="@+id/lblTiny"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tiny"
                android:id="@+id/lblTiny"
                android:layout_below="@+id/textView5" android:layout_alignStart="@+id/npItems"
                android:layout_alignEnd="@+id/npTiny"/>
        <NumberPicker
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npHuge"
                android:layout_below="@+id/textView7" android:layout_toEndOf="@+id/npPoints"/>
        <NumberPicker
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npTiny"
                android:layout_below="@+id/lblTiny" android:layout_alignEnd="@+id/lblItems"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Score"
                android:id="@+id/lblScore"
                android:layout_marginTop="40dp"
                android:layout_alignTop="@+id/npPoints" android:layout_centerHorizontal="true"
                android:textStyle="bold" android:textSize="32sp"/>
        <NumberPicker
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npEntire"
                android:layout_alignTop="@+id/npHuge" android:layout_alignStart="@+id/lblEntire"/>
        <NumberPicker
                android:descendantFocusability="blocksDescendants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/npNormal"
                android:layout_alignTop="@+id/npTiny" android:layout_toStartOf="@+id/npTiny"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/btnNext" android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/huge"
                android:id="@+id/lblHuge" android:layout_above="@+id/npHuge" android:layout_toStartOf="@+id/lblScore"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnInfo"
                android:src="@android:drawable/ic_dialog_info"
                android:tint="@android:color/holo_blue_dark"
                android:background="@android:color/transparent" android:layout_alignBottom="@+id/npItems"
                android:layout_below="@+id/lblScore"
                android:layout_alignStart="@+id/npHuge" android:layout_alignEnd="@+id/lblNormal"
                android:contentDescription="@string/scoringkey"
        />
</RelativeLayout>
